# IronRDP

./: .gitignore  ARCHITECTURE.md  report.json
crates/ironrdp/: Cargo.toml
crates/ironrdp-client/: Cargo.toml
crates/ironrdp-client/src/: config.rs  rdp.rs
crates/ironrdp-dvc/src/: client.rs
crates/ironrdp-web/: Cargo.toml
crates/ironrdp-web/src/: session.rs
crates/ironrdp-webauthn/: Cargo.toml  README.md
crates/ironrdp-webauthn/src/: client.rs  client_impl_wasm.rs  client_impl_windows.rs  lib.rs  request.rs  response.rs  server.rs
crates/ironrdp-webauthn/src/pdu/: ctap.rs  mod.rs  request.rs  response.rs  types.rs
crates/ironrdp/src/: lib.rs
web-client/iron-remote-desktop/: package-lock.json
web-client/iron-remote-desktop-rdp/: package-lock.json
web-client/iron-remote-desktop-rdp/src/: main.ts
web-client/iron-svelte-client/: package-lock.json
